fix: make task button visible

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -67,3 +67,11 @@ button {
   }
 
 }
+
+.vusible {
+  opacity: 1;
+}
+
+.hidden {
+  opacity: 0;
+}
